# user-facing

./: .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
docker/config/: .env  Dockerfile  entrypoint.sh
voxy_backend/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
voxy_backend/apps/core/: apps.py  urls.py
voxy_backend/apps/core/resources/: content_view.py
voxy_backend/apps/core/templatetags/: render_vite_bundle.py
voxy_frontend/wordCountFrontend/: package.json  vite.config.js
voxy_frontend/wordCountFrontend/src/: App.css  App.jsx
voxy_frontend/wordCountFrontend/src/components/: WordCountForm.jsx
